--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^0.12.0+2
   url_launcher: ^5.4.1
   flutter_html: ^0.11.1
+  webview_flutter: ^0.3.18+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
